// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto3";

package agntcy.pyramid.v1alpha1;

// Package-wide variables from generator "generated".
option go_package = "github.com/agntcy/pyramid/internal/pkg/generated/agntcy/pyramid/v1alpha1;pyramid_sdk_go";

// CredentialContent represents the content of a Verifiable Credential.
message CredentialContent {
  // Type specifies the type of the content of the credential.
  optional CredentialContentType content_type = 1;

  // The content representation in JSON-LD format.
  optional string content = 2;
}


// CredentialSchema represents the credentialSchema property of a Verifiable Credential.
// more information can be found [here]
//
// [here]: https://www.w3.org/TR/vc-data-model-2.0/#data-schemas
message CredentialSchema {
  // Type specifies the type of the file
  optional string type = 1;

  // The URL identifying the schema file
  optional string id = 2;
}

// EnvelopedVerifiableCredential represents a Verifiable Credential enveloped in a specific format.
message EnvelopedVerifiableCredential {
  // EnvelopeType specifies the type of the envelope used to store the credential.
  optional VerifiableCredentialEnvelopeType envelope_type = 1;

  // Value is the enveloped credential in the specified format.
  optional string value = 2;
}

// DataModel represents the W3C Verifiable Credential Data Model defined [here]
//
// [here]: https://www.w3.org/TR/vc-data-model/
message VerifiableCredential {
  // https://www.w3.org/TR/vc-data-model/#contexts
  repeated string context = 1;

  // https://www.w3.org/TR/vc-data-model/#dfn-type
  repeated string type = 2;

  // https://www.w3.org/TR/vc-data-model/#issuer
  optional string issuer = 3;

  // https://www.w3.org/TR/vc-data-model/#credential-subject
  optional string credential_subject = 4;

  // https://www.w3.org/TR/vc-data-model/#identifiers
  optional string id = 5;

  // https://www.w3.org/TR/vc-data-model/#issuance-date
  optional string issuance_date = 6;

  // https://www.w3.org/TR/vc-data-model/#expiration
  optional string expiration_date = 7;

  // https://www.w3.org/TR/vc-data-model-2.0/#data-schemas
  repeated CredentialSchema credential_schema = 8;
}


// The content of the Credential.
// Multiple content types can be supported: AgentPassport, etc.
enum CredentialContentType {
  // Unspecified Content Type.
  CREDENTIAL_CONTENT_TYPE_UNSPECIFIED = 0;
  // AgentPassport Content Type.
  // The Agent content representation following OASF schema
  // Specs: https://schema.oasf.agntcy.org/schema/objects/agent
  CREDENTIAL_CONTENT_TYPE_AGENT_PASSPORT = 1;
}

// The Envelope Type of the Verifiable Credential.
// Multiple envelope types can be supported: JOSE, COSE etc.
enum VerifiableCredentialEnvelopeType {
  // Unspecified Envelope Type.
  VERIFIABLE_CREDENTIAL_ENVELOPE_TYPE_UNSPECIFIED = 0;
  // JOSE Envelope Type.
  VERIFIABLE_CREDENTIAL_ENVELOPE_TYPE_JOSE = 1;
}

